crates/sncast/tests/e2e/get/snapshots/main__e2e__get__tx_trace__deploy_account_transaction_trace.snap
---
source: crates/sncast/tests/e2e/get/tx_trace.rs
expression: output.as_stdout()
---
Success: Transaction trace retrieved

Type:                   DEPLOY_ACCOUNT
Validate Invocation
  Entry Point Selector: __validate_deploy__
  Contract Address:     0x025bd632d7c8b7d557145b48c83b60c9db90c01f063abc8c3b96c970f0417159
  Calldata:             0x5b4b537eaa2399e3aa99c4e2e0208ebd6c71bc1467938cd52c798c601e43564, 0xfe8f0de4a7d0819c, 0x7cfe1b3bd3971955a37672cafd11283e7f5205bb0e2f14c695385c1f4f495e1
  Result:               success: 0x56414c4944
Constructor Invocation
  Entry Point Selector: constructor
  Contract Address:     0x025bd632d7c8b7d557145b48c83b60c9db90c01f063abc8c3b96c970f0417159
  Calldata:             0x7cfe1b3bd3971955a37672cafd11283e7f5205bb0e2f14c695385c1f4f495e1
  Result:               success
Fee Transfer Invocation
  Entry Point Selector: transfer
  Contract Address:     0x04718f5a0fc34cc1af16a1cdee98ffb20c31f5cd61d6ab07201858f4287c938d
  Calldata:             ContractAddress(0x1176a1bd84444c89232ec27754698e5d2e7e1a7f1539f12027f28b23ec9f3d8), 7007861473595136_u256
  Result:               success: true
