crates/sncast/tests/e2e/get/snapshots/main__e2e__get__tx_trace__deploy_account_transaction_trace_full.snap
---
source: crates/sncast/tests/e2e/get/tx_trace.rs
expression: output.as_stdout()
---
Success: Transaction trace retrieved

Type:                   DEPLOY_ACCOUNT
Constructor Invocation
  Call Type:            CALL
  Calldata:             0x7cfe1b3bd3971955a37672cafd11283e7f5205bb0e2f14c695385c1f4f495e1
  Caller Address:       0x0000000000000000000000000000000000000000000000000000000000000000
  Class Hash:           0x05b4b537eaa2399e3aa99c4e2e0208ebd6c71bc1467938cd52c798c601e43564
  Contract Address:     0x025bd632d7c8b7d557145b48c83b60c9db90c01f063abc8c3b96c970f0417159
  Entry Point Selector: constructor
  Entry Point Type:     CONSTRUCTOR
  Events
    Data:               []
    Keys:               [0x38f6a5b87c23cee6e7294bcc3302e95019f70f81586ff3cac38581f5ca96381, 0x7cfe1b3bd3971955a37672cafd11283e7f5205bb0e2f14c695385c1f4f495e1]
    Order:              0
  Execution Resources
    L1 Gas:             0
    L2 Gas:             140480
  Is Reverted:          false
  Messages:             []
  Result:               success
  Calls:                []
Execution Resources
  L1 Data Gas:          448
  L1 Gas:               0
  L2 Gas:               875840
Fee Transfer Invocation
  Call Type:            CALL
  Calldata:             ContractAddress(0x1176a1bd84444c89232ec27754698e5d2e7e1a7f1539f12027f28b23ec9f3d8), 7007861473595136_u256
  Caller Address:       0x025bd632d7c8b7d557145b48c83b60c9db90c01f063abc8c3b96c970f0417159
  Class Hash:           0x009524a94b41c4440a16fd96d7c1ef6ad6f44c1c013e96662734502cd4ee9b1f
  Contract Address:     0x04718f5a0fc34cc1af16a1cdee98ffb20c31f5cd61d6ab07201858f4287c938d
  Entry Point Selector: transfer
  Entry Point Type:     EXTERNAL
  Events
    Data:               [0x25bd632d7c8b7d557145b48c83b60c9db90c01f063abc8c3b96c970f0417159, 0x1176a1bd84444c89232ec27754698e5d2e7e1a7f1539f12027f28b23ec9f3d8, 0x18e59ce5c4cf00, 0x0]
    Keys:               [0x99cd8bde557814842a3121e8ddfd433a539b8c9f14bf31ebf108d12e6196e9]
    Order:              0
  Execution Resources
    L1 Gas:             0
    L2 Gas:             189030
  Is Reverted:          false
  Messages:             []
  Result:               success: true
  Calls:                []
Validate Invocation
  Call Type:            CALL
  Calldata:             0x5b4b537eaa2399e3aa99c4e2e0208ebd6c71bc1467938cd52c798c601e43564, 0xfe8f0de4a7d0819c, 0x7cfe1b3bd3971955a37672cafd11283e7f5205bb0e2f14c695385c1f4f495e1
  Caller Address:       0x0000000000000000000000000000000000000000000000000000000000000000
  Class Hash:           0x05b4b537eaa2399e3aa99c4e2e0208ebd6c71bc1467938cd52c798c601e43564
  Contract Address:     0x025bd632d7c8b7d557145b48c83b60c9db90c01f063abc8c3b96c970f0417159
  Entry Point Selector: __validate_deploy__
  Entry Point Type:     EXTERNAL
  Events:               []
  Execution Resources
    L1 Gas:             0
    L2 Gas:             320000
  Is Reverted:          false
  Messages:             []
  Result:               success: 0x56414c4944
  Calls:                []
