crates/sncast/tests/e2e/get/snapshots/main__e2e__get__tx_trace__falls_back_when_class_is_unavailable.snap
---
source: crates/sncast/tests/e2e/get/tx_trace.rs
expression: output.as_stdout()
---
[WARNING] Some trace data is shown as raw felts:
- could not fetch contract class 0x456: Class hash not found

Success: Transaction trace retrieved

Type:                     INVOKE
Execute Invocation
  Entry Point Selector:   0x240060cdb34fcc260f41eac7474ee1d7c80b7e3607daff9ac67c7ea2ebb1c44
  Contract Address:       0x0000000000000000000000000000000000000000000000000000000000000123
  Calldata:               0x7
  Result:                 success: 0x9
  Calls
    Entry Point Selector: 0x240060cdb34fcc260f41eac7474ee1d7c80b7e3607daff9ac67c7ea2ebb1c44
    Contract Address:     0x0000000000000000000000000000000000000000000000000000000000000789
    Calldata:             0x7
    Result:               success: 0x9
