crates/sncast/tests/e2e/get/snapshots/main__e2e__get__tx_trace__json_raw.snap
---
source: crates/sncast/tests/e2e/get/tx_trace.rs
expression: output.as_stdout()
---
{"command":"get tx-trace","execute_invocation":{"call_type":"CALL","calldata":["0x1","0x69b1360564534bf59fa889041a60f2c60ef5b259cfbf87a436867538e2c53e0","0xc844fd57777b0cd7e75c8ea68deec0adf964a6308da7a58de32364b7131cc8","0x13","0x4c141c4019d33c08b1d94a85d54c4e92c2a5b2c5a2889f12ab81ecf220752","0x4af604","0x4e8d5ddbe29135d13a7edab22018a8f61cde628b468abfe63597996402ef4d","0x6693f6f8","0x2030100000000000000000000000000000000000000000000000000000000","0x4","0x5f5e360","0x5f5f9d1","0x5f5f9d1","0x5f6174c","0x971578a2056f81","0x3afd28a5c57d","0x2","0x2f1f486eae02cc20f7fb08be2f88cbd44deca49bdc0ef031a4edf575f1cabf7","0x2a539e3eaeadfc5ca897d7cbf38397fd7c6c6f3ccbc4f260d9d23a1e6bc5287","0x6b72f55e68f1936feea371fab12ec039e8e1173579c03ac5c884ebf1653cce2","0x4be40b6cab1d8e3acf5a99261cc3e07794b250a8afa04a1f44e2ac926895e6e","0x167e81f05b6eddbe87180e9c27ba2f684a5d57709bb34c9e06f7d7f82b5c4b7","0x319f9f7ce6e6c72e179557e79c57a542508867fa05b505cc32d2380ac72e711"],"caller_address":"0x0","calls":[{"call_type":"CALL","calldata":["0x4c141c4019d33c08b1d94a85d54c4e92c2a5b2c5a2889f12ab81ecf220752","0x4af604","0x4e8d5ddbe29135d13a7edab22018a8f61cde628b468abfe63597996402ef4d","0x6693f6f8","0x2030100000000000000000000000000000000000000000000000000000000","0x4","0x5f5e360","0x5f5f9d1","0x5f5f9d1","0x5f6174c","0x971578a2056f81","0x3afd28a5c57d","0x2","0x2f1f486eae02cc20f7fb08be2f88cbd44deca49bdc0ef031a4edf575f1cabf7","0x2a539e3eaeadfc5ca897d7cbf38397fd7c6c6f3ccbc4f260d9d23a1e6bc5287","0x6b72f55e68f1936feea371fab12ec039e8e1173579c03ac5c884ebf1653cce2","0x4be40b6cab1d8e3acf5a99261cc3e07794b250a8afa04a1f44e2ac926895e6e","0x167e81f05b6eddbe87180e9c27ba2f684a5d57709bb34c9e06f7d7f82b5c4b7","0x319f9f7ce6e6c72e179557e79c57a542508867fa05b505cc32d2380ac72e711"],"caller_address":"0x350461cc881640ebbcebf747107d456ef008ec455cd95d2b76a7d9face671f1","calls":[],"class_hash":"0x2f6d77cb0bca422706a91858dff62975aef4b8214520aadb1f0b39c51f5fde","contract_address":"0x69b1360564534bf59fa889041a60f2c60ef5b259cfbf87a436867538e2c53e0","entry_point_selector":"0xc844fd57777b0cd7e75c8ea68deec0adf964a6308da7a58de32364b7131cc8","entry_point_type":"EXTERNAL","events":[{"data":["0x5f5f9d1","0x6693f6f8","0x2030100000000000000000000000000000000000000000000000000000000","0x4","0x5f5e360","0x5f5f9d1","0x5f5f9d1","0x5f6174c","0x971578a2056f81","0x3afd28a5c57d","0x4c141c4019d33c08b1d94a85d54c4e92c2a5b2c5a2889f12ab81ecf220752","0x4af604","0x0"],"keys":["0x19e22f866f4c5aead2809bf160d2b29e921e335d899979732101c6f3c38ff81","0x1610","0x350461cc881640ebbcebf747107d456ef008ec455cd95d2b76a7d9face671f1"],"order":0}],"execution_resources":{"l1_gas":18,"l2_gas":0},"is_reverted":false,"messages":[],"result":[]}],"class_hash":"0x5431265f9d2416426da800a23ddd3fe33db8e2b9fe96dbc48588ac3ac70c091","contract_address":"0x350461cc881640ebbcebf747107d456ef008ec455cd95d2b76a7d9face671f1","entry_point_selector":"0x15d40a3d6ca2ac30f4031e42be28da9b056fef9bb7357ac5e85627ee876e5ad","entry_point_type":"EXTERNAL","events":[],"execution_resources":{"l1_gas":18,"l2_gas":0},"is_reverted":false,"messages":[],"result":["0x1","0x0"]},"execution_resources":{"l1_data_gas":576,"l1_gas":30,"l2_gas":0},"fee_transfer_invocation":{"call_type":"CALL","calldata":["0x1176a1bd84444c89232ec27754698e5d2e7e1a7f1539f12027f28b23ec9f3d8","0x6e9aac6dc0ca6","0x0"],"caller_address":"0x350461cc881640ebbcebf747107d456ef008ec455cd95d2b76a7d9face671f1","calls":[],"class_hash":"0x4ad3c1dc8413453db314497945b6903e1c766495a1e60492d44da9c2a986e4b","contract_address":"0x4718f5a0fc34cc1af16a1cdee98ffb20c31f5cd61d6ab07201858f4287c938d","entry_point_selector":"0x83afd3f4caedc6eebf44246fe54e38c95e3179a5ec9ea81740eca5b482d12e","entry_point_type":"EXTERNAL","events":[{"data":["0x350461cc881640ebbcebf747107d456ef008ec455cd95d2b76a7d9face671f1","0x1176a1bd84444c89232ec27754698e5d2e7e1a7f1539f12027f28b23ec9f3d8","0x6e9aac6dc0ca6","0x0"],"keys":["0x99cd8bde557814842a3121e8ddfd433a539b8c9f14bf31ebf108d12e6196e9"],"order":0}],"execution_resources":{"l1_gas":4,"l2_gas":0},"is_reverted":false,"messages":[],"result":["0x1"]},"type":"INVOKE","validate_invocation":{"call_type":"CALL","calldata":["0x1","0x69b1360564534bf59fa889041a60f2c60ef5b259cfbf87a436867538e2c53e0","0xc844fd57777b0cd7e75c8ea68deec0adf964a6308da7a58de32364b7131cc8","0x13","0x4c141c4019d33c08b1d94a85d54c4e92c2a5b2c5a2889f12ab81ecf220752","0x4af604","0x4e8d5ddbe29135d13a7edab22018a8f61cde628b468abfe63597996402ef4d","0x6693f6f8","0x2030100000000000000000000000000000000000000000000000000000000","0x4","0x5f5e360","0x5f5f9d1","0x5f5f9d1","0x5f6174c","0x971578a2056f81","0x3afd28a5c57d","0x2","0x2f1f486eae02cc20f7fb08be2f88cbd44deca49bdc0ef031a4edf575f1cabf7","0x2a539e3eaeadfc5ca897d7cbf38397fd7c6c6f3ccbc4f260d9d23a1e6bc5287","0x6b72f55e68f1936feea371fab12ec039e8e1173579c03ac5c884ebf1653cce2","0x4be40b6cab1d8e3acf5a99261cc3e07794b250a8afa04a1f44e2ac926895e6e","0x167e81f05b6eddbe87180e9c27ba2f684a5d57709bb34c9e06f7d7f82b5c4b7","0x319f9f7ce6e6c72e179557e79c57a542508867fa05b505cc32d2380ac72e711"],"caller_address":"0x0","calls":[],"class_hash":"0x5431265f9d2416426da800a23ddd3fe33db8e2b9fe96dbc48588ac3ac70c091","contract_address":"0x350461cc881640ebbcebf747107d456ef008ec455cd95d2b76a7d9face671f1","entry_point_selector":"0x162da33a4585851fe8d3af3c2a9c60b557814e221e0d4f30ff0b2189d9c7775","entry_point_type":"EXTERNAL","events":[],"execution_resources":{"l1_gas":8,"l2_gas":0},"is_reverted":false,"messages":[],"result":["0x56414c4944"]}}
