crates/sncast/tests/e2e/get/snapshots/main__e2e__get__tx_trace__l1_handler_transaction_trace_full.snap
---
source: crates/sncast/tests/e2e/get/tx_trace.rs
expression: output.as_stdout()
---
Success: Transaction trace retrieved

Type:                     L1_HANDLER
Execution Resources
  L1 Data Gas:            192
  L1 Gas:                 18783
  L2 Gas:                 401920
Function Invocation
  Call Type:              CALL
  Calldata:               0x423f7744017600727ce4789933e4648068835e28, 99359224995532825384289367229767519998085228603184343483478058520072918113310_u256, 6289449_u256
  Caller Address:         0x0000000000000000000000000000000000000000000000000000000000000000
  Class Hash:             0x018c9ce7ffa88f15bd1fcda1350cb66cc5c369bc924e5dc108be1c9317298c99
  Contract Address:       0x0763c1a0ec1d64afe2d8d0a2c0cab6fd494dcb26d08ef1020b27aa5695761e21
  Entry Point Selector:   receive_commitment
  Entry Point Type:       L1_HANDLER
  Events
    Data:                 [0x43c585509832d6c8e71cc49e0a1b9c1e, 0xdbab5414cf45b42ceac0b391fb86d03b, 0x5ff829, 0x0]
    Keys:                 [0xe1eadb452a63ae1892154f372496b89e12ce9e7ce6fa424ec2378abd0b7fa]
    Order:                1
  Execution Resources
    L1 Gas:               6
    L2 Gas:               0
  Is Reverted:            false
  Messages:               []
  Result:                 success
  Calls
    Call Type:            CALL
    Calldata:             99359224995532825384289367229767519998085228603184343483478058520072918113310_u256, 6289449_u256
    Caller Address:       0x0763c1a0ec1d64afe2d8d0a2c0cab6fd494dcb26d08ef1020b27aa5695761e21
    Class Hash:           0x0048d1f93626722872832416241a30c20bb77403b48249e65bebae67ab7a5329
    Contract Address:     0x020f6d32589a0d57c72faed530354bac49144ca99aff3429cc3284514583b595
    Entry Point Selector: receive_hash
    Entry Point Type:     EXTERNAL
    Events
      Data:               [0x5ff829, 0x0, 0x43c585509832d6c8e71cc49e0a1b9c1e, 0xdbab5414cf45b42ceac0b391fb86d03b]
      Keys:               [0x3ea6420d00c650e7e902fc0797c87dc37be11f59689cd106c2948c1d91f7b60]
      Order:              0
    Execution Resources
      L1 Gas:             2
      L2 Gas:             0
    Is Reverted:          false
    Messages:             []
    Result:               success
    Calls:                []
